feat: register a new user
