# src/handler/api/routes/auth/auth-router.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+import type { Container } from "inversify";
+import { buildRegisterUserHandler } from "./register-handler";
+
+export const buildAuthRouter = ({
+  container,
+}: {
+  container: Container;
+}): Router => {
+  const authRouter = Router({ mergeParams: true });
+
+  authRouter.post("/register", buildRegisterUserHandler({ container }));
+
+  return authRouter;
+};
